# rainbowDice

./: .gitignore  README.md  privacyPolicy.md  rainbowDiceLinux.cpp  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/indigo/rainbowdice/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/quasar/cerulean/rainbowdice/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: shaderGL.frag  shaderGL.vert  shaderLinesGL.frag  shaderLinesGL.vert
app/src/main/cpp/: TextureAtlasGL.hpp  TextureAtlasVulkan.h  android.cpp  android.hpp  dice.cpp  dice.hpp  diceDescription.hpp  drawer.cpp  drawer.hpp  graphicsVulkan.cpp  graphicsVulkan.hpp  main.cpp  native-lib.cpp  native-lib.hpp  rainbowDice.cpp  rainbowDice.hpp  rainbowDiceAndroid.cpp  rainbowDiceGL.cpp  rainbowDiceGL.hpp  rainbowDiceGlobal.cpp  rainbowDiceGlobal.hpp  rainbowDiceLinux.cpp  rainbowDiceVulkan.cpp  rainbowDiceVulkan.hpp  random.cpp  random.hpp  text.cpp  text.hpp  vulkanWrapper.cpp  vulkanWrapper.hpp
app/src/main/java/com/indigo/rainbowdice/: ByteBufferBuilder.java  DiceConfigurationActivity.java  DiceResult.java  DieConfiguration.java  Draw.java  MainActivity.java  MySurfaceCallback.java
app/src/main/java/com/quasar/cerulean/rainbowdice/: ActivitySettings.java  ActivityThemeSelector.java  ByteBufferBuilder.java  ColorArrayAdapter.java  Constants.java  (+24 more)
app/src/main/res/drawable/: button_divider.xml  divider.xml  horizontal_divider.xml  popup_menu_background.xml  popup_menu_header.xml  rounded_button_dark.xml  rounded_button_light.xml  rounded_rectangle_dark.xml  rounded_rectangle_light.xml  roundedbutton.xml  vertical_divider.xml
app/src/main/res/layout/: activity_dice_configuration.xml  activity_dice_customization.xml  activity_dice_customization_landscape.xml  activity_dice_log.xml  activity_dice_sides.xml  activity_main.xml  activity_settings.xml  activity_theme_selector.xml  add_bonus_dialog.xml  change_theme_dialog.xml  configuration_confirm_dialog.xml  customization_constant.xml  customization_dice_list.xml  customization_die.xml  customization_main.xml  customization_recipes_dialog.xml  dice_list_divider.xml  dice_list_item.xml  dice_log_item.xml  edit_delete_row.xml  list_item_dice_configuration.xml  list_item_operation.xml  message_dialog.xml  message_ok_cancel.xml  operator_view.xml  row_dice_configuration.xml  save_as_dialog.xml  theme_spinner_entry.xml
app/src/main/res/layout-land/: activity_dice_customization.xml
app/src/main/res/menu/: dice_configuration_menu.xml  dice_customization_menu.xml  dice_log_menu.xml  dice_menu.xml  dice_settings_menu.xml  dice_sides_menu.xml  dice_theme_selection_menu.xml
app/src/main/res/raw/: frag.spv  vert.spv
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/shaders/: shader.frag  shader.vert  shaderLines.frag  shaderLines.vert
app/src/test/java/com/indigo/rainbowdice/: ExampleUnitTest.java
(+91 files in other folders)
